// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiPaper-elevation0 MuiAppBar-root MuiAppBar-positionStatic AppBarComponent-appBar-2 MuiAppBar-colorPrimary"
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-10"
              href="/"
            >
              <img
                src="https://altinncdn.no/img/altinn_logo_header.png"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          />
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot and not render subHeader menu 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiPaper-elevation0 MuiAppBar-root MuiAppBar-positionStatic AppBarComponent-appBar-2 MuiAppBar-colorPrimary"
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-10"
              href="/"
            >
              <img
                src="https://altinncdn.no/img/altinn_logo_header.png"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          />
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot with backgroundColor prop 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiPaper-elevation0 MuiAppBar-root MuiAppBar-positionStatic AppBarComponent-appBar-2 MuiAppBar-colorPrimary"
    style={
      Object {
        "backgroundColor": "pink",
      }
    }
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-10"
              href="/"
            >
              <img
                src="https://altinncdn.no/img/altinn_logo_header.png"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          />
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot with no service or org 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiPaper-elevation0 MuiAppBar-root MuiAppBar-positionStatic AppBarComponent-appBar-2 MuiAppBar-colorPrimary"
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-10"
              href="/"
            >
              <img
                src="https://altinncdn.no/img/altinn_logo_header.png"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          />
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot with subHeader and Publisere selection active 1`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiPaper-elevation0 MuiAppBar-root MuiAppBar-positionStatic AppBarComponent-appBar-2 MuiAppBar-colorPrimary"
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-10"
              href="/"
            >
              <img
                src="https://altinncdn.no/img/altinn_logo_header.png"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          />
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`AppBarComponent - src/navigation/main-header/appBar Snapshot should match snapshot with subHeader and Publisere selection active 2`] = `
<div
  className="AppBarComponent-root-1"
>
  <header
    className="MuiPaper-root MuiPaper-elevation0 MuiAppBar-root MuiAppBar-positionStatic AppBarComponent-appBar-2 MuiAppBar-colorPrimary"
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <a
              className="AppBarComponent-aImgStyling-10"
              href="/"
            >
              <img
                src="https://altinncdn.no/img/altinn_logo_header.png"
              />
            </a>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-flex-end MuiGrid-grid-xs-true"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          />
        </div>
      </div>
    </div>
  </header>
</div>
`;
